# PyEarthTools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CITATION.cff  MANIFEST.in  NOTICE.md  README.md  conftest.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  tutorials.yml
.github/workflows/: interrogate.yml  python-app.yml  run-pre-commit.yml
Training/: README.md  dgxa100.pbs  train.py  volta100.pbs
Training/configs/: config.yaml
Training/configs/data/: example.yaml
Training/configs/data/module/: default.yaml
Training/configs/data/splits/: default.yaml
Training/configs/model/: default.yaml
Training/configs/trainer/: default.yaml
Training/pipelines/: example.pipe
docs/: api.md  catalogue.md  conf.py  config.md  devguide.md  index.md  installation.md  maintainer.md  newproject.md  newuser.md  projectideas.md
docs/api/: api.md
docs/api/bundled_models/: bundled_api.md  bundled_index.md
docs/api/data/: data_api.md  data_how_to.md  data_index.md
docs/api/evaluation/: evaluation_how_to.md
docs/api/models/: models_how_to.md
docs/api/pipeline/: pipeline_api.md  pipeline_how_to.md  pipeline_index.md
docs/api/training/: training_api.md  training_how_to.md  training_index.md
docs/api/tutorial/: tutorial_api.md  tutorial_index.md
docs/api/utils/: utils_api.md  utils_index.md
docs/api/zoo/: zoo_api.md  zoo_index.md
docs/nbook/: Gallery.ipynb
fourcastnext/: model.py
notebooks/: Gallery.ipynb
notebooks/data/: Basic_Indexing.ipynb  Catalog.ipynb  CustomDataIndex.ipynb  GettingComplexSeries.ipynb  PatternIndexing.ipynb  RegionCutting.ipynb  SingleIndexing.ipynb  Transforms.ipynb  UsingTheInBuiltOperations.ipynb
notebooks/demo/: FourCastNeXt_Inference.ipynb
notebooks/pipeline/: Basics.ipynb  Branching.ipynb  Modifications.ipynb  Operations.ipynb  index.md
notebooks/tutorial/: .gitignore  Accessing_ERA5_Data.ipynb  CNN-Model-Training.ipynb  CNN_model_training.ipynb  Data_Pipelines.ipynb  Downloading_ERA5.ipynb  ENSO Gridded MLP.ipynb  ENSO Prediction.ipynb  ENSO_Forecast.ipynb  ENSO_Pipeline.ipynb  FourCastMini_Demo.ipynb  FourCastNeXt_Training.ipynb  HimawariAllBands.ipynb  Interfacing_to_Data_at_NCI.ipynb  MLX-Demo-Custom-Arch.ipynb  MLX_Demo_CustomArch.ipynb  Met_Office_Site_Archive.ipynb  MultipleSources.ipynb  Working_with_Climate_Data.ipynb
notebooks/tutorial/ENSO Tutorial/: ENSO_Forecast.ipynb
notebooks/tutorial/ENSO_Tutorial/: 1_Tech_Test.ipynb  ENSO_Forecast.ipynb  ENSO_Gridded_MLP.ipynb  ENSO_Pipeline.ipynb
notebooks/tutorial/HadISD/: 1_HadISD_Download.ipynb  2_HadISD_to_zarr.ipynb  3_HadISD_XGBoost_Pipeline.ipynb  Data_Config.ipynb  HadISD_QC_Exploration.ipynb  Pipeline_Config.ipynb
notebooks/tutorial/cnn_training/stats/: mean.npy  std.npy
notebooks/tutorial/minimax_configs/: minimax.pipe
notebooks/tutorial/minimax_configs/minimax_configs/: minimax_experiment.yaml
notebooks/tutorial/minimax_configs/minimax_configs/data/: lowres.yaml
notebooks/tutorial/minimax_configs/minimax_configs/data/module/: default.yaml
notebooks/tutorial/minimax_configs/minimax_configs/data/splits/: default.yaml
notebooks/tutorial/minimax_configs/minimax_configs/model/: default.yaml
notebooks/tutorial/minimax_configs/minimax_configs/trainer/: default.yaml
old_docs/: .gitignore  .gitlab-ci.yml  README.md  mkdocs.yml  requirements.txt
old_docs/docs/: index.md
old_docs/docs/css/: code_select.css
old_docs/docs/documentation/: config.md  index.md  new_infra.md
old_docs/docs/documentation/data/: Modifications.md  TemporalIndexing.md  accessor.md  index.md  transforms.md
old_docs/docs/documentation/data/Developing Your Own/: dataflow.md  decorators.md  extend.md  index.md
old_docs/docs/documentation/data/Indexes/: opendata.md
old_docs/docs/documentation/pipeline/: available.md  creating.md  index.md  using.md
old_docs/docs/documentation/pipeline/details/: filter.md  index.md  iterator.md  modification.md  operation.md  sampler.md
old_docs/docs/documentation/training/: XGBoost.md  index.md
old_docs/docs/documentation/training/Creating/: datamodule.md  index.md  predictor.md  wrapper.md
old_docs/docs/models/: adding.md  commands.md  configuration.md  index.md  programatic.md
old_docs/docs/models/Usage/: OnDisk.md  advanced.md
old_docs/docs/pyearthtools_101/: index.md  license.md
old_docs/docs/pyearthtools_101/Data/: 1 - Benefits.ipynb  2 - Retrieving More Data.ipynb  3 - Modifications.ipynb  index.md
old_docs/docs/pyearthtools_101/Integrated/: index.md  zarr.ipynb
old_docs/docs/pyearthtools_101/Models/: index.md
old_docs/docs/pyearthtools_101/Pipeline/: 1 - Basics.ipynb  2 - Operations.ipynb  3 - Modifications.ipynb  4 - Branching.ipynb  index.md
old_docs/docs/pyearthtools_101/Training/: SFNO_Inference.ipynb  index.md
old_docs/docs/started/: index.md  overview.md
old_docs/docs/started/installation/: NCI-Developer.md  NCI-User.md  index.md  manual.md
old_docs/scripts/: gen_ref_pages.py
scripts/: gen_ref_pages.py
src/edit_archive_NCI/: ACCESS.py  AGCD.py  BARPA.py  BARRA.py  BARRAV2.py  BRAN.py  ERA5.py  Himiwari.py  MODIS.py  OceanMaps.py  __init__.py  utilities.py
src/edit_archive_NCI/ancilliary/: BARRA_V2.py  ERA5.py
src/edit_archive_NCI/structure/: BARPA.struc  BARRA_V2.struc  ERA5.struc
src/fourcastnext/: __init__.py  model.py  registered_model.py
src/fourcastnext/architecture/: __init__.py  afnonet.py
src/site_archive_nci/: ACCESS.py  AGCD.py  BARPA.py  BARRA.py  BARRAV2.py  BRAN.py  ERA5.py  Himawari.py  Himiwari.py  MODIS.py  OceanMaps.py  __init__.py  utilities.py
src/site_archive_nci/variables/: __init__.py
src/site_archive_nci/variables/ACCESS/: an.valid  fcmm.valid
src/site_archive_nci/variables/AGCD/: __init__.py  precip.valid
src/site_archive_nci/variables/BARRA/: analysis.valid
src/site_archive_nci/variables/BRAN/: annual.valid  month.valid  static.valid
src/site_archive_nci/variables/OceanMaps/: forecast.valid
